[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/Down Hill.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Simple_prompt.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Base_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Tiles/down-arrow (1).png" type="Texture" id=4]
[ext_resource path="res://Tiles/up-arrow.png" type="Texture" id=5]

[sub_resource type="StreamTexture" id=1]
flags = 5
load_path = "res://.import/unnamed.jpg-ca309f53b99615fa885467f8ae637786.stex"

[sub_resource type="DynamicFont" id=2]
size = 100
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 100
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="Simple_prompt" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -953.343
margin_top = -536.828
margin_right = 961.657
margin_bottom = 533.172

[node name="Fondo2" type="TextureRect" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -962.157
margin_top = -536.172
margin_right = 8594.84
margin_bottom = 4828.83
rect_scale = Vector2( 0.2, 0.2 )
texture = SubResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ok" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 410.509
margin_top = -230.804
margin_right = 924.509
margin_bottom = -33.8038
custom_fonts/font = SubResource( 2 )
text = "ok"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -516.0
margin_top = 25.4558
margin_right = 516.0
margin_bottom = 112.456
custom_fonts/font = SubResource( 3 )
text = "Talentos"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="total_puntos" type="Label" parent="."]
margin_left = 837.214
margin_top = 138.593
margin_right = 1079.21
margin_bottom = 188.593
rect_pivot_offset = Vector2( 174.922, 81.3896 )
custom_fonts/font = ExtResource( 3 )
text = "10 puntos "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 167.0
margin_top = 328.0
margin_right = 372.0
margin_bottom = 378.0
custom_fonts/font = ExtResource( 3 )
text = "Vida:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 99.2405
margin_top = 418.412
margin_right = 304.241
margin_bottom = 468.412
custom_fonts/font = ExtResource( 3 )
text = "Ataque:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="."]
margin_left = 74.0303
margin_top = 503.07
margin_right = 289.03
margin_bottom = 553.07
custom_fonts/font = ExtResource( 3 )
text = "Defensa:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vida_puntos" type="Label" parent="."]
margin_left = 359.21
margin_top = 330.926
margin_right = 504.21
margin_bottom = 395.926
custom_fonts/font = ExtResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="up_vida" type="TextureButton" parent="vida_puntos"]
margin_left = 79.3137
margin_top = -16.8284
margin_right = 148.314
margin_bottom = 59.1716
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="down_vida" type="TextureButton" parent="vida_puntos"]
margin_left = 164.167
margin_top = -8.34314
margin_right = 233.167
margin_bottom = 67.6569
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ataque_puntos" type="Label" parent="."]
margin_left = 356.382
margin_top = 418.607
margin_right = 501.382
margin_bottom = 483.607
custom_fonts/font = ExtResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="up_ataque" type="TextureButton" parent="ataque_puntos"]
margin_left = 82.1422
margin_top = -22.4854
margin_right = 151.142
margin_bottom = 53.5146
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="down_ataque" type="TextureButton" parent="ataque_puntos"]
margin_left = 161.338
margin_top = -19.6569
margin_right = 230.338
margin_bottom = 56.3431
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="defensa_puntos" type="Label" parent="."]
margin_left = 356.382
margin_top = 503.46
margin_right = 501.382
margin_bottom = 568.46
custom_fonts/font = ExtResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="up_defensa" type="TextureButton" parent="defensa_puntos"]
margin_left = 87.799
margin_top = -13.9999
margin_right = 156.799
margin_bottom = 62.0001
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="down_defensa" type="TextureButton" parent="defensa_puntos"]
margin_left = 164.167
margin_top = -16.8286
margin_right = 233.167
margin_bottom = 59.1714
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Panel/Ok" to="." method="_on_Ok_pressed"]
[connection signal="pressed" from="vida_puntos/up_vida" to="." method="_on_up_vida_pressed"]
[connection signal="pressed" from="vida_puntos/down_vida" to="." method="_on_down_vida_pressed"]
[connection signal="pressed" from="ataque_puntos/up_ataque" to="." method="_on_up_ataque_pressed"]
[connection signal="pressed" from="ataque_puntos/down_ataque" to="." method="_on_down_ataque_pressed"]
[connection signal="pressed" from="defensa_puntos/up_defensa" to="." method="_on_up_defensa_pressed"]
[connection signal="pressed" from="defensa_puntos/down_defensa" to="." method="_on_down_defensa_pressed"]
